disable vertical scroll with TMA API, coins amount font-size fix on small width devices

--- a/src/components/UserInfoBar/userInfoBar.css
+++ b/src/components/UserInfoBar/userInfoBar.css
@@ -99,3 +99,10 @@
     color: white;
 }
 
+@media (max-width: 360px) {
+    .coin-count {
+        font-size: 0.75rem;
+    }
+    
+}
+
